# soybean-admin-rust

./: Cargo.toml  Makefile  README.md  rustfmt.toml
.cargo/: config.toml
axum-casbin/: Cargo.toml
axum-casbin/src/: lib.rs  middleware.rs
axum-casbin/tests/: test_middleware.rs  test_middleware_domain.rs  test_set_enforcer.rs
deploy/: docker-compose-redis-cluster.yml  docker-compose.yml  redis.conf
deploy/redis-cluster/: redis-1.conf  redis-2.conf  redis-3.conf  redis-4.conf  redis-5.conf  redis-6.conf
migration/: Cargo.toml
migration/src/: lib.rs
migration/src/datas/: m20241023_102950_insert_sys_domain.rs  m20241024_033005_insert_sys_user.rs  m20241024_034526_insert_sys_role.rs  m20241024_034744_insert_sys_menu.rs  m20241024_082926_insert_casbin_rule.rs  mod.rs
migration/src/migrations/: m20240815_082808_create_enum_status.rs  m20240815_082854_create_sys_user.rs  mod.rs
migration/src/schemas/: m20240815_082808_create_enum_status.rs  m20240815_082854_create_sys_user.rs  m20241023_090604_create_sys_role.rs  m20241023_091109_create_sys_access_key.rs  m20241023_091115_create_sys_domain.rs  m20241023_091132_create_sys_endpoint.rs  m20241023_091138_create_sys_login_log.rs  m20241023_091143_create_sys_menu.rs  m20241023_091149_create_sys_operation_log.rs  m20241023_091155_create_sys_organization.rs  m20241023_091159_create_sys_role_menu.rs  m20241023_091204_create_sys_tokens.rs  m20241023_091210_create_sys_user_role.rs
sea-orm-adapter/: Cargo.toml
sea-orm-adapter/src/: action.rs  adapter.rs  entity.rs  migration.rs
server/api/: Cargo.toml
server/api/src/admin/: mod.rs  sys_access_key_api.rs  sys_authentication.rs  sys_authentication_api.rs  sys_domain_api.rs  sys_endpoint_api.rs  sys_login_log.rs  sys_menu_api.rs  sys_operation_log_api.rs  sys_role_api.rs  sys_user_api.rs
server/config/: Cargo.toml
server/config/examples/: application.json  application.toml  application.yaml
server/config/src/: config_init.rs  context.rs  lib.rs
server/config/src/model/: config.rs  database_config.rs  jwt_config.rs  mod.rs  mongo_config.rs  redis_config.rs  s3_config.rs  server_config.rs
server/constant/: Cargo.toml
server/constant/src/definition/: consts.rs  mod.rs
server/core/: Cargo.toml
server/core/src/: lib.rs
server/core/src/sign/: api_key.rs  api_key_middleware.rs  mod.rs
server/core/src/web/: auth.rs  authentication.rs  error.rs  jwt.rs  mod.rs  operation_log.rs  page.rs  res.rs  util.rs  validator.rs
server/global/: Cargo.toml
server/global/src/: global.rs  lib.rs
server/initialize/: Cargo.toml
server/initialize/src/: aws_s3_initialization.rs  casbin_initialization.rs  config_initialization.rs  db_initialization.rs  event_channel_initialization.rs  jwt_initialization.rs  lib.rs  log_tracing_init.rs  redis_initialization.rs  router_initialization.rs  server_initialization.rs
server/initialize/tests/: jwt.rs  jwt_auth_middleware.rs  lib.rs
server/middleware/: Cargo.toml
server/middleware/src/: api_key_middleware.rs  jwt.rs  lib.rs
server/model/: Cargo.toml
server/model/src/admin/: mod.rs
server/model/src/admin/entities/: casbin_rule.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  sys_access_key.rs  sys_domain.rs  sys_endpoint.rs  sys_login_log.rs  sys_menu.rs  sys_operation_log.rs  sys_org_user.rs  sys_organization.rs  sys_role.rs  sys_role_menu.rs  sys_user.rs  sys_user_role.rs
server/model/src/admin/input/: mod.rs  sys_authentication.rs  sys_domain.rs  sys_menu.rs  sys_role.rs  sys_user.rs
server/model/src/admin/output/: mod.rs  sys_authentication.rs  sys_domain.rs  sys_menu.rs  sys_user.rs
server/resource/: Cargo.toml
server/resources/: application-test.json  application-test.toml  application-test.yaml  application.yaml  rbac_model.conf
server/router/: Cargo.toml
server/router/src/admin/: mod.rs  sys_access_key_route.rs  sys_authentication_route.rs  sys_domain_route.rs  sys_endpoint_route.rs  sys_login_log_route.rs  sys_menu_route.rs  sys_operation_log_route.rs  sys_organization_route.rs  sys_role_route.rs  sys_sandbox_route.rs  sys_user_route.rs
server/service/: Cargo.toml
server/service/src/: lib.rs
server/service/src/admin/: error.rs  mod.rs  sys_access_key_service.rs  sys_auth_service.rs  sys_authorization_service.rs  sys_domain_service.rs  sys_endpoint_service.rs  sys_login_log_service.rs  sys_menu_service.rs  sys_operation_log_service.rs  sys_role_service.rs  sys_user_service.rs
server/service/src/admin/dto/: sys_auth_dto.rs
server/service/src/admin/errors/: mod.rs  sys_access_key_error.rs  sys_domain_error.rs  sys_menu_error.rs  sys_role_error.rs  sys_user_error.rs
server/service/src/admin/event_handlers/: auth_event_handler.rs
server/service/src/admin/events/: access_token_event.rs  login_log_event.rs
server/service/src/helper/: db_helper.rs  mod.rs
server/shared/: Cargo.toml
server/shared/src/: error.rs
server/utils/: Cargo.toml
server/utils/src/: lib.rs  secure_util.rs  tree_util.rs
xdb/benches/: search.rs
xdb/src/: searcher.rs
