[workspace]
members = [
    "sea-orm-adapter",
]
exclude = []
resolver = "2"

[profile.release]
opt-level = 3               # 最大程度优化代码执行性能。
debug = false               # 不生成调试信息，以减小最终二进制文件的大小。
lto = true                  # 启用链接时优化（Link Time Optimization），可以进一步提高性能和减少最终二进制的大小。
codegen-units = 1           # 将代码生成单元设置为1，以允许编译器在编译时进行更广泛的优化，但会增加编译时间。
panic = 'abort'             # 在遇到 panic 时使程序立即终止，而不是展开栈。这可以减小二进制大小，也能略微提高性能。

[workspace.package]
authors = ["1571339199@qq.com"]
publish = false
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = { version = "0.1.80", default-features = false }
casbin = { version = "2.2.0", default-features = false }
sea-orm = { version = "0.12.15", default-features = false }
tokio = { version = "1.38.0", default-features = false }
