[workspace]
members = ["server/api",
    "axum-casbin",
    "sea-orm-adapter",
    "xdb",
    "migration",
    "server/api", "server/config", "server/core", "server/global", "server/initialize", "server/middleware", "server/model", "server/resource", "server/router", "server/service", "server/utils", "server/bin", "server/constant", "server/shared",
]
exclude = []
resolver = "2"

[profile.release]
opt-level = 3               # 最大程度优化代码执行性能。
debug = false               # 不生成调试信息，以减小最终二进制文件的大小。
lto = true                  # 启用链接时优化（Link Time Optimization），可以进一步提高性能和减少最终二进制的大小。
codegen-units = 1           # 将代码生成单元设置为1，以允许编译器在编译时进行更广泛的优化，但会增加编译时间。
panic = 'abort'             # 在遇到 panic 时使程序立即终止，而不是展开栈。这可以减小二进制大小，也能略微提高性能。

[profile.dev]
split-debuginfo = "unpacked"

[workspace.package]
authors = ["wang1571339199@outlook.com"]
publish = false
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Asynchronous Runtime and Utilities
tokio = { version = "1.40.0", default-features = false }
async-trait = { version = "0.1.83", default-features = false }
async-std = { version = "1.13.0", default-features = false }
futures = "0.3.31"

# Web Framework and Middleware
axum = "0.7.7"
axum-extra = "0.9.3"
tower = "0.5.1"
tower-http = "0.6.1"
tower-layer = "0.3.2"
tower-service = "0.3.2"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
bytes = "1.7.2"
jsonwebtoken = "9.3.0"
headers = "0.4.0"
mime = "0.3.17"
validator = "0.18.1"

# Casbin and Authorization
casbin = { version = "2.5.0", default-features = false }

# Database ORM and Adapter
sea-orm = { version = "1.0.1", default-features = false }

# Testing
axum-test-helpers = "0.7.6"

# Serialization and Deserialization
serde = "1.0.210"
serde_yaml = "0.9.33"
serde_json = "1.0.128"

# Utility Libraries
once_cell = "1.20.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
log = "0.4.21"
env_logger = "0.11.3"
simplelog = "0.12.2"
simple_logger = "5.0.0"
thiserror = "1.0.64"
chrono = "0.4.38"
lazy_static = "1.4.0"
derive-new = "0.7.0"
ulid = "1.1.2"
bcrypt = "0.15.1"
argon2 = "0.5.3"

strum = "0.26"
strum_macros = "0.26"
