[package]
name = "server-api"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
server-core = { path = "../core" }
server-model = { path = "../model" }

axum = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["full"] }
