[package]
name = "server-api"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
server-core = { path = "../core" }
server-service = { path = "../service" }
axum-casbin = { path = "../../axum-casbin" }

axum = { workspace = true, features = ["http1", "query", "json", "multipart"] }
