[package]
name = "server-config"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["full"] }

[dev-dependencies]
simplelog = { workspace = true }
