[package]
name = "server-config"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
server-global = { path = "../global" }

serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
log = { workspace = true }

[dev-dependencies]
simplelog = { workspace = true }
