[package]
name = "server-core"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
server-config = { path = "../config" }
server-global = { path = "../global" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { workspace = true}
validator = { workspace = true, features = ["derive"] }
jsonwebtoken = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
thiserror = { workspace = true }
mime = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
ulid = { workspace = true }

http = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }

futures = { workspace = true }
bytes = { workspace = true }
form_urlencoded = { workspace = true }

[dev-dependencies]
