[package]
name = "server-core"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
server-config = { path = "../config" }
server-global = { path = "../global" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { workspace = true}
validator = { workspace = true, features = ["derive"] }
jsonwebtoken = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
thiserror = { workspace = true }
mime = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
ulid = { workspace = true }

http = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }

futures = { workspace = true }
bytes = { workspace = true }
form_urlencoded = { workspace = true }

tracing = { workspace = true }

once_cell = { workspace = true }
ring = "0.17"
hex = "0.4"
md-5 = "0.10"
urlencoding = "2.1"
parking_lot = "0.12"
moka = { version = "0.12", features = ["sync"] }

[dev-dependencies]
