[package]
name = "server-global"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
once_cell = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["full"] }
jsonwebtoken = { workspace = true }
lazy_static = { workspace = true }
http = { workspace = true }  # 替换 axum 为 http
