[package]
name = "server-initialize"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
server-config = { path = "../config" }
axum-casbin = { path = "../../axum-casbin" }
sea-orm-adapter = { path = "../../sea-orm-adapter" }

log = { workspace = true }
casbin = { workspace = true }
sea-orm = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
axum-test-helpers = { workspace = true }
tower = { workspace = true, features = ["full"] }
tokio = { workspace = true, default-features = false, features = ["full"] }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
simplelog = { workspace = true }
