[package]
name = "server-initialize"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
server-config = { path = "../config" }
server-constant = { path = "../constant" }
server-global = { path = "../global" }
server-middleware = { path = "../middleware" }
server-router = { path = "../router" }
server-service = { path = "../service" }
axum-casbin = { path = "../../axum-casbin" }
sea-orm-adapter = { path = "../../sea-orm-adapter" }

log = { workspace = true }
casbin = { workspace = true }
sea-orm = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["full"] }
tower-http = { workspace = true, features = ["trace", "tracing"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-error = { workspace = true }
tracing-log = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
server-core = { path = "../core" }

axum-test-helpers = { workspace = true }
tower = { workspace = true, features = ["full"] }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
simplelog = { workspace = true }
simple_logger = { workspace = true }
jsonwebtoken = { workspace = true }
