[package]
name = "server-middleware"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
server-core = { path = "../core" }
axum-casbin = { path = "../../axum-casbin" }

axum = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
ulid = { workspace = true, features = ["std"] }

[dev-dependencies]
