[package]
name = "server-model"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
validator = { workspace = true, features = ["derive"] }
derive-new = { workspace = true }

sea-orm = { workspace = true, features = ["runtime-tokio-native-tls", "with-chrono"] }
