[package]
name = "server-service"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
server-constant = { path = "../constant" }
server-core = { path = "../core" }
server-global = { path = "../global" }
server-model = { path = "../model" }
server-utils = { path = "../utils" }

async-trait = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["full"] }
sea-orm = { workspace = true, features = ["runtime-tokio-native-tls", "macros"] }
thiserror = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
